Sun Apr 27 01:40:32 BST 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Upgrade to 20080401.

Sun Apr 27 01:32:58 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (ko_name): Add another possible translation, seen in
	  hdparm(1).

Sun Apr 27 01:31:47 BST 2008  Colin Watson  <cjwatson@debian.org>

	* src/manconv.c (try_iconv): Don't handle //IGNORE unless this is
	  the last encoding to be tried.
	* src/encodings.c (add_manconv): Append //IGNORE to the target
	  encoding.
	* docs/NEWS: Document this.

Sun Apr 27 00:54:05 BST 2008  Colin Watson  <cjwatson@debian.org>

	Don't emit encoding conversion errors in man-db's quiet mode (Debian
	bug #473862).

	* src/manconv.c (options, parse_opt): Accept -q/--quiet.
	  (try_iconv): Suppress iconv errors under --quiet.
	* man/man1/manconv.man1 (SYNOPSIS, OPTIONS): Document --quiet.
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/pl.po: Update.
	* po/man-db.pot, po/*.po: Update.

	* src/encoding.c (add_manconv): Pass -q to manconv if this is mandb
	  in quiet mode.

Sat Apr 26 14:34:26 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (DESCRIPTION): Bring list of conventional
	  section names more into sync with man-pages(7).
	* man/po4a/po/man-db-manpages.pot, man/po4a/po/pl.po: Update.

Sat Apr 26 13:51:27 BST 2008  Colin Watson  <cjwatson@debian.org>

	* man/de/man1/apropos.man1, man/de/man1/man.man1,
	  man/de/man1/manpath.man1, man/de/man1/whatis.man1,
	  man/de/man1/zsoelim.man1, man/de/man5/manpath.man5,
	  man/de/man8/catman.man8, man/es/man1/man.man1,
	  man/fr/man1/man.man1, man/it/man8/accessdb.man8: Fix various small
	  mistakes that caused warnings from groff.

Sun Mar 30 20:39:34 BST 2008  Benno Schulenberg  <benno@vertaalt.nl>

	* po/nl.po: Update from Translation Project.

Mon Mar 17 19:29:43 GMT 2008  Clytie Siddall  <clytie@riverland.net.au>

	* po/vi.po: Update from Translation Project.

Fri Mar 14 14:24:58 GMT 2008  Colin Watson  <cjwatson@debian.org>
